// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputContainer /> is disabled by default 1`] = `
<InputContainer
  started={false}
>
  <Input
    onChange={[Function]}
    onEnter={[Function]}
    started={false}
    value=""
  >
    <styled.div>
      <div
        className="sc-kpOJdX eWIdmE"
      >
        <styled.input
          disabled={true}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Press start to begin..."
          type="text"
          value=""
        >
          <input
            className="sc-dxgOiQ hpcKVB"
            disabled={true}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Press start to begin..."
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </Input>
</InputContainer>
`;

exports[`<InputContainer /> is disabled when the game has stopped 1`] = `
<InputContainer
  started={false}
>
  <Input
    onChange={[Function]}
    onEnter={[Function]}
    started={false}
    value=""
  >
    <styled.div>
      <div
        className="sc-kpOJdX eWIdmE"
      >
        <styled.input
          disabled={true}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Press start to begin..."
          type="text"
          value=""
        >
          <input
            className="sc-dxgOiQ hpcKVB"
            disabled={true}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Press start to begin..."
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </Input>
</InputContainer>
`;

exports[`<InputContainer /> is enabled when the game has started 1`] = `
<InputContainer
  started={true}
>
  <Input
    onChange={[Function]}
    onEnter={[Function]}
    started={true}
    value=""
  >
    <styled.div>
      <div
        className="sc-kpOJdX eWIdmE"
      >
        <styled.input
          disabled={false}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Type the word and hit Enter!"
          type="text"
          value=""
        >
          <input
            className="sc-dxgOiQ hpcKVB"
            disabled={false}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Type the word and hit Enter!"
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </Input>
</InputContainer>
`;
